--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,8 @@ AUTH_DISCORD_SECRET=""
 
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/hearts2hearts"
+
+#Spotify
+SPOTIFY_CLIENT_ID=""
+SPOTIFY_CLIENT_SECRET=""
+SPOTIFY_REDIRECT_URI=""
