--- a/.env.example
+++ b/.env.example
@@ -15,14 +15,17 @@
 # https://next-auth.js.org/configuration/options#secret
 AUTH_SECRET=""
 
-# Next Auth Discord Provider
-AUTH_DISCORD_ID=""
-AUTH_DISCORD_SECRET=""
-
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/hearts2hearts"
 
+# Email Configuration (for email authentication)
+EMAIL_SERVER_HOST=""
+EMAIL_SERVER_PORT=""
+EMAIL_SERVER_USER="your-email@gmail.com"
+EMAIL_SERVER_PASSWORD="your-app-password"
+EMAIL_FROM="your-email@gmail.com"
+
 #Spotify
-SPOTIFY_CLIENT_ID=""
+NEXT_PUBLIC_SPOTIFY_CLIENT_ID=""
 SPOTIFY_CLIENT_SECRET=""
 SPOTIFY_REDIRECT_URI=""
