--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "drizzle-orm": "^0.41.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
+    "nodemailer": "^7.0.6",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
